--- a/validitech/p/tabelValidator.html
+++ b/validitech/p/tabelValidator.html
@@ -81,6 +81,7 @@
             usersRef.get().then((doc) => {
                 const logoutNav = `
             <span type="button" class="link-light ms-5" onclick="location.replace('./profil.html')">Profil</span>
+            <span type="button" class="link-light ms-5" onclick="location.replace('./demo.html')">Cara Pemakaian</span>
             <span type="button" class="link-danger ms-5" onclick="logout()">Log Out</span>
             `
 
